# MakeIt-Real-AI-Engineering-Challenge

./: .gitignore  Readme.md  pyproject.toml
