[project]
name = "makeItRealAPI"
version = "0.1.0"
description = "FastAPI backend"
authors = [
    {name = "Arthur Fleischman"}
]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "fastapi[standard]",
]

[tool.fastapi]
entrypoint = "app.main:app"

[virtualenvs]
create = true
in-project = true